force-app/main/default/objects/Planilla_Seguro_Social__c/Planilla_Seguro_Social__c.object-meta.xml
<CustomObject>
    <label>Planilla Seguro Social</label>
    <nameField>
        <label>Nombre de Planilla</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planilla Seguro Social</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>