force-app/main/default/objects/Planilla_Seguro_Social__c/fields/Aporte_Patronal_Maternidad__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Patronal_Maternidad__c</fullName>
    <label>Aporte Patronal Maternidad</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>