force-app/main/default/objects/Planilla_Seguro_Social__c/fields/Aporte_Patrono_SS__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Patrono_SS__c</fullName>
    <label>Aporte Patrono SS</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>