force-app/main/default/objects/Planilla_Seguro_Social__c/fields/Empresa2__c.field-meta.xml
<CustomField>
    <fullName>Empresa2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planilla Seguro Social</relationshipLabel>
    <relationshipName>Planilla_Seguro_Social</relationshipName>
    <type>Lookup</type>
</CustomField>