force-app/main/default/objects/Planilla_Seguro_Social__c/fields/Fecha_Creacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Creacion__c</fullName>
    <label>Fecha Creacion</label>
    <type>Date</type>
</CustomField>