force-app/main/default/objects/Planilla_Seguro_Social__c/fields/Fecha_Planilla__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Planilla__c</fullName>
    <label>Fecha Planilla</label>
    <type>Date</type>
</CustomField>