force-app/main/default/objects/Planilla_Seguro_Social__c/fields/Riesgo_Profecional_Patronal__c.field-meta.xml
<CustomField>
    <fullName>Riesgo_Profecional_Patronal__c</fullName>
    <label>Riesgo Profecional Patronal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>