force-app/main/default/objects/Planilla_Seguro_Social__c/fields/Total_Aporte_Empleado_Maternidad__c.field-meta.xml
<CustomField>
    <fullName>Total_Aporte_Empleado_Maternidad__c</fullName>
    <label>Total Aporte Empleado Maternidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>