force-app/main/default/objects/Planilla_Seguro_Social__c/fields/Total_Aporte_Empleado_SS__c.field-meta.xml
<CustomField>
    <fullName>Total_Aporte_Empleado_SS__c</fullName>
    <label>Total Aporte Empleado SS</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>