force-app/main/default/objects/Planilla_Seguro_Social__c/fields/Total_Riesgo_Profecional_Patronal__c.field-meta.xml
<CustomField>
    <fullName>Total_Riesgo_Profecional_Patronal__c</fullName>
    <label>Total Riesgo Profecional Patronal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>