force-app/main/default/objects/Planilla_Seguro_Social__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Portal Empresarial</label>
    <referenceTo>Usuario_Portal_Empresarial__c</referenceTo>
    <relationshipLabel>Planilla Seguro Social</relationshipLabel>
    <relationshipName>Planilla_Seguro_Social</relationshipName>
    <type>Lookup</type>
</CustomField>